# OpenCSG

./: CMakeLists.txt  Makefile  OpenCSG.dev  OpenCSG.dsw  OpenCSG.sln  OpenCSG_vc10.sln  OpenCSG_vc2019.sln  OpenCSG_vc2022.sln  README.md  build.txt  changelog.txt  copying.txt  index.html  license.txt  makefile  news.html  opencsg.pro  publications.html  version.txt
RenderTexture/: Makefile  RenderTexture.cpp  RenderTexture.h  TestRenderDepthTexture.cpp  TestRenderDepthTexture.dsp  TestRenderTexture.cpp  TestRenderTexture.dsp  TestRenderTexture.dsw  test.cg  texture2D.cg  textureRECT.cg
doc/: index.html  news.html  publications.html
example/: CMakeLists.txt  Makefile  OpenCSGexample.dsp  OpenCSGexample.vcproj  OpenCSGexample.vcxproj  displaylistPrimitive.cpp  displaylistPrimitive.h  example.pro  includeGl.h  main.cpp
include/: opencsg.h  opencsgConfig.h
src/: CMakeLists.txt  Makefile  abstractRenderTexture.cpp  abstractRenderTexture.h  area.cpp  area.h  batch.cpp  batch.h  channelManager.cpp  channelManager.h  context.cpp  context.h  frameBufferObject.cpp  frameBufferObject.h  frameBufferObjectExt.cpp  frameBufferObjectExt.h  occlusionQuery.cpp  occlusionQuery.h  occlusionQueryAdapter.cpp  occlusionQueryAdapter.h  offscreenBuffer.cpp  offscreenBuffer.h  opencsgConfig.h  opencsgRender.cpp  opencsgRender.h  openglExt.h  openglHelper.cpp  openglHelper.h  pBufferTexture.cpp  pBufferTexture.h  primitive.cpp  primitiveHelper.cpp  primitiveHelper.h  renderGoldfeather.cpp  renderSCS.cpp  scissorMemo.cpp  scissorMemo.h  sequencer.cpp  sequencer.h  settings.cpp  (+4 more)
src/glad/include/glad/: gl.h  glad.h
src/glad/src/: gl.cpp  glad.c  glad.cpp
win32/: OpenCSG.dsp  OpenCSG.vcproj  OpenCSG.vcxproj
